feature: cycle monitors on toolbar

--- a/.github/workflows/generator-windows.yml
+++ b/.github/workflows/generator-windows.yml
@@ -357,7 +357,8 @@ jobs:
         if: fromJson(inputs.extras).cycleMonitor == 'true'
         shell: bash
         run: |
-          git apply ./github/patches/cycle_monitor.diff
+          wget https://raw.githubusercontent.com/bryangerlach/rdgen/refs/heads/master/.github/patches/cycle_monitor.diff
+          git apply cycle_monitor.diff
 
 
       - name: run as admin
