--- a/.github/workflows/generator-android.yml
+++ b/.github/workflows/generator-android.yml
@@ -392,6 +392,13 @@ jobs:
           wget https://raw.githubusercontent.com/bryangerlach/rdgen/refs/heads/master/.github/patches/xoffline.diff
           git apply xoffline.diff
 
+      - name: hide-cm
+        continue-on-error: true
+        if: fromJson(inputs.extras).hidecm == 'true'
+        run: |
+          wget https://raw.githubusercontent.com/bryangerlach/rdgen/refs/heads/master/.github/patches/hidecm.diff
+          git apply hidecm.diff
+
       - name: Report Status
         uses: fjogeleit/http-request-action@v1
         with:
