--- a/.github/workflows/generator-windows.yml
+++ b/.github/workflows/generator-windows.yml
@@ -519,10 +519,13 @@ jobs:
         uses: microsoft/setup-msbuild@v2
 
       - name: Build msi
+        continue-on-error: true
         if: env.UPLOAD_ARTIFACT == 'true'
         run: |
           pushd ./res/msi
-          python preprocess.py --app-name "${{ inputs.appname }}" --arp -d ../../rustdesk
+          myappname = "${{ inputs.appname }}"
+          myappname_nospace = "${myappname// /_}"
+          python preprocess.py --app-name $myappname --arp -d ../../rustdesk
           nuget restore msi.sln
           msbuild msi.sln -p:Configuration=Release -p:Platform=x64 /p:TargetVersion=Windows10
           cp ./Package/bin/x64/Release/en-us/Package.msi ../../SignOutput/rustdesk-latest.msi
