update for 1.3.7, hbb_common is now a submodule of rustdesk

--- a/.github/workflows/generator-android.yml
+++ b/.github/workflows/generator-android.yml
@@ -200,12 +200,14 @@ jobs:
         with:
           repository: rustdesk/rustdesk
           ref: refs/tags/${{ env.VERSION }}
+          submodules: recursive
        
       - name: Checkout source code
         if: ${{ env.VERSION == 'master' }}
         uses: actions/checkout@v4
         with:
           repository: rustdesk/rustdesk
+          submodules: recursive
 
       - name: Install flutter
         uses: subosito/flutter-action@v2
