--- a/.github/workflows/pre137-generator-windows.yml
+++ b/.github/workflows/pre137-generator-windows.yml
@@ -89,7 +89,7 @@ env:
 
 jobs:
   generate-bridge:
-    uses: ./.github/workflows/bridge.yml
+    uses: ./.github/workflows/pre137-bridge.yml
     with:
       version: ${{ fromJson(inputs.extras).version }}
 
@@ -153,14 +153,12 @@ jobs:
         with:
           repository: rustdesk/rustdesk
           ref: refs/tags/${{ env.VERSION }}
-          submodules: recursive
 
       - name: Checkout source code
         if: ${{ env.VERSION == 'master' }}
         uses: actions/checkout@v4
         with:
           repository: rustdesk/rustdesk
-          submodules: recursive
 
       - name: Restore bridge files
         uses: actions/download-artifact@master
