--- a/.github/workflows/pre137-generator-windows.yml
+++ b/.github/workflows/pre137-generator-windows.yml
@@ -533,9 +533,9 @@ jobs:
         continue-on-error: true
         if: env.UPLOAD_ARTIFACT == 'true'
         run: |
+          $myappname = "${{ inputs.appname }}" -replace '\s','_'
+          cp "rustdesk/${{ inputs.appname }}.exe" "rustdesk/${myappname}.exe"
           pushd ./res/msi
-          $myappname = "${{ inputs.appname }}"
-          $myappname = $myappname -replace '\s','_'
           python preprocess.py --app-name "$myappname" --arp -d ../../rustdesk
           nuget restore msi.sln
           msbuild msi.sln -p:Configuration=Release -p:Platform=x64 /p:TargetVersion=Windows10
