--- a/.github/workflows/generator-macos.yml
+++ b/.github/workflows/generator-macos.yml
@@ -99,6 +99,13 @@ jobs:
       fail-fast: false
       matrix:
         job:
+          #- {
+          #    target: x86_64-apple-darwin,
+          #    os: macos-13,
+          #    extra-build-args: "",
+          #    arch: x86_64,
+          #    vcpkg-triplet: x64-osx,
+          #  }
           - {
               target: aarch64-apple-darwin,
               os: macos-latest,
@@ -108,21 +115,6 @@ jobs:
             }
 
     steps:
-      - name: Setup build environment cache
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-            flutter/build
-            ~/Library/Caches/CocoaPods
-            ~/Library/Developer/Xcode/DerivedData
-          key: ${{ runner.os }}-build-${{ matrix.job.target }}-${{ hashFiles('**/Cargo.lock', '**/Podfile.lock', 'flutter/pubspec.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ matrix.job.target }}-
-            ${{ runner.os }}-build-
-
       - name: Export GitHub Actions cache environment variables
         uses: actions/github-script@v6
         with:
@@ -242,7 +234,7 @@ jobs:
           data: '{"uuid": "${{ inputs.uuid }}", "status": "10% complete"}'    
 
       - name: Install flutter
-        uses: subosito/flutter-action@v2
+        uses: subosito/flutter-action@v2.12.0
         with:
           channel: "stable"
           flutter-version: ${{ env.FLUTTER_VERSION }}
@@ -266,17 +258,21 @@ jobs:
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@v1
         with:
-          toolchain: ${{ env.MAC_RUST_VERSION }}
-          targets: ${{ matrix.job.target }}
-
-      - name: Cache vcpkg
-        uses: actions/cache@v3
+            toolchain: ${{ env.MAC_RUST_VERSION }}
+            targets: ${{ matrix.job.target }}
+            components: "rustfmt"
+  
+        
+      - uses: Swatinem/rust-cache@v2
         with:
-          path: |
-            ${{ github.workspace }}/vcpkg
-            ${{ env.VCPKG_DEFAULT_BINARY_CACHE }}
-          key: ${{ runner.os }}-vcpkg-${{ matrix.job.vcpkg-triplet }}-${{ env.VCPKG_COMMIT_ID }}
+          prefix-key: ${{ matrix.job.os }}
 
+      - name: Setup vcpkg with Github Actions binary cache
+        uses: lukka/run-vcpkg@v11
+        with:
+            vcpkgGitCommitId: ${{ env.VCPKG_COMMIT_ID }}
+            doNotCache: false
+  
       - name: Install vcpkg dependencies
         run: |
           if ! $VCPKG_ROOT/vcpkg \
@@ -479,8 +475,9 @@ jobs:
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@v1
         with:
-          toolchain: ${{ env.MAC_RUST_VERSION }}
-          targets: ${{ matrix.job.target }}
+            toolchain: ${{ env.MAC_RUST_VERSION }}
+            targets: ${{ matrix.job.target }}
+            components: "rustfmt"
 
       - name: Report Status
         uses: fjogeleit/http-request-action@v1
@@ -506,8 +503,8 @@ jobs:
       - name: Setup vcpkg with Github Actions binary cache
         uses: lukka/run-vcpkg@v11
         with:
-          vcpkgGitCommitId: ${{ env.VCPKG_COMMIT_ID }}
-          doNotCache: false
+            vcpkgGitCommitId: ${{ env.VCPKG_COMMIT_ID }}
+            doNotCache: false
   
       - name: Install vcpkg dependencies
         run: |
