--- a/.github/workflows/bridge.yml
+++ b/.github/workflows/bridge.yml
@@ -1,3 +1,6 @@
+BRIDGE YAML 26/01
+
+
 # This yaml shares the build bridge steps with ci and nightly.
 name: Build flutter-rust-bridge
 # 2023-11-23 18:00:00+00:00
@@ -46,16 +49,22 @@ jobs:
 
       - name: Install prerequisites
         run: |
+          sudo apt-get install ca-certificates -y
           sudo apt-get update -y
-          sudo apt-get install -y --no-install-recommends \
+          sudo apt-get install -y \
             clang \
             cmake \
+            curl \
+            gcc \
+            git \
+            g++ \
             libclang-10-dev \
             libgtk-3-dev \
             llvm-10-dev \
             nasm \
             ninja-build \
-            pkg-config
+            pkg-config \
+            wget
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@v1
@@ -67,8 +76,6 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           prefix-key: bridge-${{ matrix.job.os }}
-          shared-key: "${{ matrix.job.target }}-${{ hashFiles('**/Cargo.lock') }}"
-          cache-directories: "~/.cargo/bin/flutter_rust_bridge_codegen"
 
       - name: Cache Bridge
         id: cache-bridge
@@ -76,18 +83,6 @@ jobs:
         with:
           path: /tmp/flutter_rust_bridge
           key: vcpkg-${{ matrix.job.arch }}
-
-      - name: Cache Flutter dependencies
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.pub-cache
-            flutter/build
-            flutter/.dart_tool
-            flutter/.pub-cache
-          key: flutter-${{ matrix.job.os }}-${{ hashFiles('flutter/pubspec.lock') }}
-          restore-keys: |
-            flutter-${{ matrix.job.os }}-
 
       - name: Install flutter
         uses: subosito/flutter-action@v2
